--- a/style.css
+++ b/style.css
@@ -40,25 +40,21 @@ body {
 }
 
 @media screen and (max-width: 767px){
-.Header {
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
+    .Header {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
 
-
-@media screen and (max-width: 1080px){
-.Header {
-    background-color: #fff;
-    z-index: 10;
-}
-}
 
 @media screen and (max-width: 1080px){
-.Header--common {
-    position: fixed !important;
+    .Header {
+        background-color: #fff;
+        z-index: 10;
+    }
 }
-}
+
+
 
 header {
     display: block;
@@ -67,16 +63,14 @@ header {
 HeaderContainer {
     display: flex;
     justify-content: space-between;
-    margin: 0 36px;
-    max-width: 100%;
     position: relative;
 }
 
 @media screen and (max-width: 767px){
-.HeaderContainer {
-    max-width: 100%;
-    margin: 0 20px;
-}
+    .HeaderContainer {
+        max-width: 100%!important;
+        margin: 0 20px!important;
+    }
 }
 
 body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4, h5, h6, form, select {
@@ -93,16 +87,10 @@ a {
 }
 
 .HeaderLogo__image--pc {
-    display: block;
     height: 20px;
     width: auto;
 }
 
-@media screen and (max-width: 767px){
-.HeaderLogo__image--pc {
-    display: none;
-}
-}
 
 img {
     border: 0;
@@ -121,10 +109,11 @@ ody, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4,
 }
 
 @media screen and (max-width: 767px){
-.HeaderLogo__image--sp {
-    display: block;
+    .HeaderLogo__image--sp {
+        display: block;
+    }
 }
-}
+
 
 .HeaderContainer {
     display: flex;
@@ -153,75 +142,75 @@ li {
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavHamburger {
-    cursor: pointer;
-}
-}
-
-@media screen and (max-width: 1080px){
-.HeaderNavHamburger {
-    cursor: pointer;
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 21px;
-    z-index: 100;
-}
+    .HeaderNavHamburger {
+        cursor: pointer;
+    }
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavHamburger__line:first-child {
-    top: 0;
-}
-}
-
-@media screen and (max-width: 1080px){
-.HeaderNavHamburger__line {
-    position: absolute;
-    top: 50%;
-    display: block;
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-    transform: translate(0,-50%);
-    border-radius: 10px;
-    transition: top .2s,transform .2s,opacity .3s;
-}
+    .HeaderNavHamburger {
+        cursor: pointer;
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 21px;
+        z-index: 100;
+    }
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavHamburger__line:last-child {
-    top: 100%;
-}
+    .HeaderNavHamburger__line:first-child {
+        top: 0;
+    }
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavHamburger__line {
-    position: absolute;
-
-    display: block;
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-    transform: translate(0,-50%);
-    border-radius: 10px;
-    transition: top .2s,transform .2s,opacity .3s;
+    .HeaderNavHamburger__line {
+        position: absolute;
+        top: 50%;
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #333;
+        transform: translate(0,-50%);
+        border-radius: 10px;
+        transition: top .2s,transform .2s,opacity .3s;
+    }
 }
+
+@media screen and (max-width: 1080px){
+    .HeaderNavHamburger__line:last-child {
+        top: 100%;
+    }
+}
+
+@media screen and (max-width: 1080px){
+    .HeaderNavHamburger__line {
+        position: absolute;
+    
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #333;
+        transform: translate(0,-50%);
+        border-radius: 10px;
+        transition: top .2s,transform .2s,opacity .3s;
+    }
 }
 
 
 @media screen and (max-width: 1080px){
-.HeaderNavHamburger__line {
-    position: absolute;
-    top: 50%;
-    display: block;
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-    transform: translate(0,-50%);
-    border-radius: 10px;
-    transition: top .2s,transform .2s,opacity .3s;
-}
+    .HeaderNavHamburger__line {
+        position: absolute;
+        top: 50%;
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #333;
+        transform: translate(0,-50%);
+        border-radius: 10px;
+        transition: top .2s,transform .2s,opacity .3s;
+    }
 }
 
 body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4, h5, h6, form, select {
@@ -237,26 +226,26 @@ body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4
 }
 
 @media screen and (max-width: 767px){
-.HeaderNavList {
-    top: 52px;
-}
+    .HeaderNavList {
+        top: 52px;
+    }
 }
 
 
 @media screen and (max-width: 1080px){
-.HeaderNavList {
-    overflow-y: scroll;
-    position: fixed;
-    left: 100%;
-    width: 100%;
-    display: block;
-    padding-top: 20px;
-    padding-bottom: 75px;
-    transition: transform .5s;
-    z-index: 99;
-    background-color: rgba(0,0,0,.8);
-    height: 100%;
-}
+    .HeaderNavList {
+        overflow-y: scroll;
+        position: fixed;
+        left: 100%;
+        width: 100%;
+        display: block;
+        padding-top: 20px;
+        padding-bottom: 75px;
+        transition: transform .5s;
+        z-index: 99;
+        background-color: rgba(0,0,0,.8);
+        height: 100%;
+    }
 }
 
 ul, ol {
@@ -273,9 +262,9 @@ body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavListItem {
-    margin-right: 0;
-}
+    .HeaderNavListItem {
+        margin-right: 0;
+    }
 }
 
 .HeaderNavListItem__link {
@@ -283,9 +272,9 @@ body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavListItem__link {
-    padding: 20px 0;
-}
+    .HeaderNavListItem__link {
+        padding: 20px 0;
+    }
 }
 
 .HeaderNavListItem__link>span:first-child {
@@ -293,11 +282,11 @@ body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavListItem__link>span:first-child {
-    font-size: 16px;
-    letter-spacing: 5px;
-    color: #fff;
-}
+    .HeaderNavListItem__link>span:first-child {
+        font-size: 16px;
+        letter-spacing: 5px;
+        color: #fff;
+    }
 }
 
 .HeaderNavListItem__link>span {
@@ -311,12 +300,12 @@ body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavListItem__link>span:last-child {
-    font-size: 12px;
-    margin-top: 10px;
-    color: #f79214;
-    letter-spacing: 2px;
-}
+    .HeaderNavListItem__link>span:last-child {
+        font-size: 12px;
+        margin-top: 10px;
+        color: #f79214;
+        letter-spacing: 2px;
+    }
 }
 
 HeaderNavListItem:last-of-type {
@@ -324,18 +313,18 @@ HeaderNavListItem:last-of-type {
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavListItem:last-of-type {
-    margin-top: 20px;
-}
+    .HeaderNavListItem:last-of-type {
+        margin-top: 20px;
+    }
 }
 
 @media screen and (max-width: 1080px){
-.HeaderNavListItem__button {
-    font-size: 16px;
-    margin: 0 auto;
-    height: 60px;
-    width: 250px;
-}
+    .HeaderNavListItem__button {
+        font-size: 16px;
+        margin: 0 auto;
+        height: 60px;
+        width: 250px;
+    }
 }
 
 .HeaderNavListItem__button {
@@ -373,13 +362,14 @@ main {
 
 
 @media screen and (max-width: 767px){
-main {
-    padding-top: 52px;
-}
+    main {
+        padding-top: 52px;
+    }
 }
 
 .FirstView {
-    background-image: url(//camp.potepan.com/wp-content/themes/potepancamp/assets/styles/../images/home/first-view/top-hero.jpg);
+    background-image: url(https://camp.potepan.com/wp-content/themes/potepancamp/assets/images/home/first-view/top-hero.jpg.webp
+);
     background-size: cover;
     background-position: center;
     padding-top: 100px;
@@ -387,13 +377,30 @@ main {
 }
 
 @media screen and (max-width: 767px){
-.FirstView {
-    background-image: none;
-    padding-top: 0;
-    padding-bottom: 35px;
-}
+    .FirstView {
+        background-image: none;
+        padding-top: 0;
+        padding-bottom: 35px;
+    }
 }
 
+
+.FirstViewContent__title {
+    color: #333;
+    font-family: 'Lato',sans-serif;
+    font-weight: 700;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__title {
+        font-size: 25px;
+        line-height: 36px;
+        margin-left: calc(((100vw - 100%)/2)*-1);
+        margin-right: calc(((100vw - 100%)/2)*-1);
+    }
+}
 
 .lazyload {
     background-image: none !important;
@@ -404,9 +411,9 @@ main {
 }
 
 @media screen and (max-width: 767px){
-.FirstView__main-image--sp {
-    display: block;
-}
+    .FirstView__main-image--sp {
+        display: block;
+    }
 }
 
 .FirstView__main-image {
@@ -418,6 +425,7 @@ img {
     vertical-align: middle;
 }
 
+
 .FirstView__container {
     max-width: 1140px;
     padding-left: 50px;
@@ -428,17 +436,17 @@ img {
 }
 
 @media screen and (max-width: 767px){
-.FirstView__container {
-    margin-top: -45vw;
-}
+    .FirstView__container {
+        margin-top: -45vw;
+    }
 }
 
 @media screen and (max-width: 767px){
-.FirstView__container {
-    max-width: none;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+    .FirstView__container {
+        max-width: none;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 .FirstView__container {
@@ -447,9 +455,94 @@ img {
     position: relative;
 }
 
+.FirstViewContent {
+    margin-bottom: 70px;
+    width: fit-content;
+}
+
+@media screen and (max-width: 767px){
+    .FirstViewContent {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .FirstViewContent__images {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+        width: 100%;
+    }
+}
+
+.FirstViewContent__images img {
+    margin-right: 8px;
+}
+
+@media screen and (max-width: 767px){
+    .FirstViewContent__images img {
+        width: 27.5%;
+    }
+}
+
+.FirstViewContent__images img:nth-of-type(2) {
+    width: 40%;
+}
+
+.FirstViewContent__button:visited {
+    color: #fff;
+}
+
+.FirstViewContent__images img:last-of-type {
+    margin-right: 0;
+}
+
+@media screen and (max-width: 767px){
+    .FirstViewContent__images img {
+        width: 27.5%;
+    }
+}
+
+.FirstViewContent__button {
+    align-items: center;
+    background-color: #f79214;
+    border: none;
+    border-radius: 38px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: 700;
+    height: 64px;
+    justify-content: center;
+    text-decoration: none;
+    text-align: center;
+    width: 100%;
+}
+
+.FirstViewCaption {
+    color: #a2a2a4;
+    font-size: 12px;
+}
+
+p {
+    line-height: 1.5;
+}
+
 .AboutWrapper {
     background-color: #f79214;
     padding: 44px 0;
+}
+
+@media screen and (max-width: 767px){
+    .AboutWrapper {
+        padding: 30px 0;
+    }
+}
+
+.AboutWrapper {
+    background-color: #f79214;
 }
 
 .About {
@@ -464,9 +557,44 @@ img {
     justify-content: space-between;
 }
 
+@media screen and (max-width: 1024px){
+    .About {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .About {
+        max-width: none;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+
 .About__video {
     width: 50%;
 }
+
+@media screen and (max-width: 767px){
+    .About__video {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .About__video {
+        margin-bottom: 16px;
+        width: 75%;
+    }
+}
+
+video {
+object-fit: contain;
+overflow-clip-margin: content-box;
+overflow: clip;
+}
+
 
 .About__title {
     display: flex;
@@ -477,6 +605,20 @@ img {
     margin-left: 32px;
 }
 
+@media screen and (max-width: 767px){
+    .About__title {
+        margin-bottom: 0;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .About__title {
+        margin-left: 0;
+        width: 75%;
+    }
+}
+
 .About__title h2 {
     font-family: "游ゴシック",YuGothic,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","メイリオ",Meiryo,"ＭＳ Ｐゴシック","MS PGothic",sans-serif;
     font-size: 38px;
@@ -485,6 +627,12 @@ img {
     line-height: 54px;
     margin-bottom: 8px;
     width: 100%;
+}
+
+@media screen and (max-width: 767px){
+    .About__title h2 span {
+        letter-spacing: 1px;
+    }
 }
 
 .About__title h2, .About__title p {
@@ -512,6 +660,13 @@ img {
     margin-bottom: 24px;
 }
 
+@media screen and (max-width: 1024px){
+    .About__title p {
+        margin-bottom: 32px;
+    }
+}
+
+
 .About__title p {
     color: #fff;
     text-align: left;
@@ -521,6 +676,26 @@ img {
     display: inline-block;
 }
 
+@media screen and (max-width: 1024px){
+    .About__reskilling-logo {
+        margin: auto;
+    }
+}
+
+.About__reskilling-logo>img {
+    width: 158px;
+}
+
+img {
+    border: 0;
+    vertical-align: middle;
+}
+
+body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4, h5, h6, form, select {
+    margin: 0;
+    padding: 0;
+}
+
  a{
     color: #333;
     text-decoration: none;
@@ -528,16 +703,4 @@ img {
 
 a:-webkit-any-link {
     cursor: pointer;
-}
-
-.About {
-    max-width: 1140px;
-    padding-left: 50px;
-    padding-right: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
 }
