--- a/style.css
+++ b/style.css
@@ -572,9 +572,17 @@ body, div, p, ul, ol, li, dl, dt, dd, table, th, td, img, figure, h1, h2, h3, h4
     width: 100%;
 }
 
+.FirstViewContent__button:visited {
+    color: #fff;
+}
+
 .FirstViewCaption {
     color: #a2a2a4;
     font-size: 12px;
+}
+
+.FirstViewCaption a {
+    color: #a2a2a4;
 }
 
 p {
